# backend

./: AGENTS_WORKING_VERIFICATION.md  COGNITIVE_API_INTEGRATION.md  FINAL_TESTING_REPORT.md  INTEGRATION_COMPLETE.md  LICENSE  README.md  TESTING_COMPLETE_SUMMARY.md  TESTING_RESULTS.md  pyproject.toml
NewMindmate/: clear_data.py  generate_data.py  get_all_call_history.py  main.py  schemas.py  test_analyze_session.py  test_audio_upload.py  test_doctors.py  test_get_call_msg.py  test_mvp_flow.py  test_supabase.py
NewMindmate/db/: supabase_client.py  vector_utils.py
NewMindmate/routes/: cognitive_routes.py  sessions.py
NewMindmate/services/: cognitive_api_client.py
NewMindmate/tests/: test_analyze_session.py
